--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jax Convert</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>Jax Convert</header>
   <p>Convert WEBP files to PNG files!</p>
@@ -17,6 +19,8 @@
     </form>
     <div id="output"></div>
   </div>
+  <a href="https://github.com/your-repository-link" class="source-code-btn" target="_blank">View Source Code</a>
   <script src="script.js"></script>
 </body>
+
 </html>
