--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
     </form>
     <div id="output"></div>
   </div>
-  <a href="https://github.com/your-repository-link" class="source-code-btn" target="_blank">View Source Code</a>
+  <a href="https://github.com/emcrald/jaxconvert" class="source-code-btn" target="_blank">View Source Code</a>
   <script src="script.js"></script>
 </body>
 
